Edit: updated home section

--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,8 @@ html, body {
   padding: 0;
   box-sizing: border-box;
   width: 100%;
-  min-height: 100vh;
-  overflow-x: hidden;
+  /* min-height: 100vh;
+  overflow-x: hidden; */
   background: #000;
   color: white;
   user-select: none;
